# spdr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: numerical-claims.md  validated-against.md
docs/implementations/: 2026-06-04-phase-1-foundation.md  2026-06-04-phase-2-crc.md  2026-06-04-phase-3-timing.md  2026-06-05-phase-4-module-specific.md  2026-06-05-phase-5-manufacturing.md  2026-06-05-phase-6-robustness.md  2026-06-05-phase-7-cli-decode.md  2026-06-05-phase-8-linter-capacity.md  2026-06-05-phase-9a-xmp-expo.md  2026-06-05-phase-9b-timing-rules.md  2026-06-06-phase-10-reserved-consistency.md  2026-06-06-phase-11-lint-cli.md  2026-06-06-phase-12-release.md
spdr/: Cargo.toml  README.md
spdr-cli/: Cargo.toml  README.md
spdr-cli/src/: lib.rs  main.rs
spdr-cli/tests/: cli.rs
spdr-cli/tests/snapshots/: cli__lint_human_clean_snapshot.snap  cli__lint_human_with_findings_snapshot.snap  cli__lint_json_clean_snapshot.snap  cli__lint_json_with_findings_snapshot.snap  cli__render_human_snapshot.snap  cli__render_json_snapshot.snap
spdr/fuzz/: Cargo.toml
spdr/fuzz/fuzz_targets/: decode_all.rs
spdr/src/: crc.rs  error.rs  identity.rs  lib.rs  lint.rs  manufacturing.rs  module.rs  reader.rs  timing.rs  vendor.rs
spdr/tests/: crc.rs  fixture.rs  lint.rs  manufacturing.rs  module.rs  robustness.rs  timing.rs  vendor.rs
spdr/tests/snapshots/: fixture__decodes_identity_and_base_snapshot.snap  manufacturing__decodes_manufacturing_snapshot.snap  module__decodes_module_specific_snapshot.snap  timing__decodes_base_timings_snapshot.snap
