# cargo-fuzz harness for the `spdr` decoders.
#
# This is committed but is NOT built or run by the Windows gate: libFuzzer needs
# a clang/LLVM (Linux or WSL) toolchain that Windows MSVC does not provide, so it
# cannot link here. The empty `[workspace]` table makes `fuzz/` its own workspace
# root, so the parent's `cargo ... --workspace` never sees this package. Mert runs
# it manually on Linux; see
# `docs/implementations/2026-06-05-phase-6-robustness.md` for the invocation.
[package]
name = "spdr-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
spdr = { path = ".." }

[[bin]]
name = "decode_all"
path = "fuzz_targets/decode_all.rs"
test = false
doc = false
bench = false

# Own workspace, so the root `--workspace` gate ignores `fuzz/` entirely.
[workspace]
